--- a/templates/lesson1.html
+++ b/templates/lesson1.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>TC23 - Dashboard Embed - test</title>
+  <title>TC23 - Dashboard Embed - test tim dev</title>
 
   <!-- Custom fonts for this template-->
   <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
