--- a/templates/login3.html
+++ b/templates/login3.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>TC22 - Embedding Session</title>
+  <title>TC - BYO Analytical App</title>
 
   <!-- Custom fonts for this template-->
   <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -38,10 +38,11 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Welcome to TC22! - Lesson 3</h1>
+                    <h1 class="h4 text-gray-900 mb-4">Lesson 3 - Advnaced API v3. 
+                      Weclome External User!</h1>
                   </div>
                   <div class="text-center mb-4">
-                    <img src="static/img/TC22_logo_blue_370x91.png" width="340">
+                    <img src="static/img/TC_logo_blue_370x91.png" width="340">
                   </div>
                   <form action="{{url_for('getJWT')}}" class="user" method="post">
                     <div class="form-group">
