--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>TC22 - Embedding Session</title>
+  <title>TC - BYO Analytical App</title>
 
   <!-- Custom fonts for this template-->
   <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -73,9 +73,9 @@
 <body>
 
   <div class="container2">
-    <img src="static/img/tc22-home-hero-foreground_v4.png" style="width:100%;">
+    <img src="static/img/tc-home-hero-foreground_v4.png" style="width:100%;">
     <div class="top-left">
-      <img src="static/img/TC22_logo_blue_370x91.png" style="width:100%;">
+      <img src="static/img/TC_logo_blue_370x91.png" style="width:100%;">
     </div>
     <div class="items-h">
       <h1>Embedded Hands On Training Menu</h1>
@@ -83,7 +83,8 @@
         <li><a href="/lesson1"><h2>Lesson 1 : Simple Embedding</h2></a></li>
         <li><a href="/login2"><h2>Lesson 2 : Connected Apps</h2></a></li>
         <li><a href="/login3"><h2>Lesson 3 : Advanced APIv3</h2></a></li>
-        <li><a href="/login9"><h2>Lesson 4 : Complete Solution</h2></a></li>
+        <li><a href="/login4"><h2>Lesson 4 : User Attribute Functions</h2></a></li>
+        <li><a href="/login9"><h2>Lesson 5 : Complete Solution</h2></a></li>
     </ul>
     </div>
   </div>
