--- a/templates/lesson3_1.html
+++ b/templates/lesson3_1.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>TC22 - Swap Viz</title>
+  <title>TC - Swap Viz</title>
 
   <!-- Custom fonts for this template-->
   <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -19,7 +19,7 @@
   <!-- Custom styles for this template-->
   <link href="static/css/sb-admin-2.css" rel="stylesheet">
 
-  <script type="module" src="http://localhost:8000/javascripts/api/tableau.embedding.3.latest.js"></script>
+  <script type="module" src="https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.js"></script>
   <script src="static/js/embed3_1.js"></script>
   <!--<script type="text/javascript" src="static/js/embed.js"> </script>-->
   <!-- Exercise #01a-->
@@ -38,7 +38,7 @@
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
         <div class="sidebar-brand-icon">
-          <img src="https://www.tableau.com/sites/default/files/2022-03/TC22_logo_blue_370x91.png" height="50">
+          <img src="static/img/TC_logo_blue_370x91.png" height="50">
         </div>
       </a>
 
@@ -317,7 +317,7 @@
                 <div class="card-body flex-column">
                   <div id="vizContainer">
                     <tableau-viz id="tableauViz"
-                      src= "{{tabServer + '/views/tc_viz/MyTCDash'}}"
+                      src= "{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MyTCDash"
                         device="desktop" toolbar="hidden" hide-tabs width="100%">
                     </tableau-viz>
                   </div>
@@ -341,7 +341,7 @@
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; TC 2022</span>
+            <span>Copyright &copy; TC 2023</span>
           </div>
         </div>
       </footer>
