--- a/templates/lesson4.html
+++ b/templates/lesson4.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>TC - Select Marks</title>
+  <title>TC - User Attribute Function</title>
 
   <!-- Custom fonts for this template-->
   <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -20,12 +20,12 @@
   <link href="static/css/sb-admin-2.css" rel="stylesheet">
 
   <script type="module" src="https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.js"></script>
-  <script src="static/js/embed3_3.js"></script>
+  <script src="static/js/embed4.js"></script>
 
 
 </head>
 
-<!-- Exercise #01c-->
+
 <body id="page-top">
 
   <!-- Page Wrapper -->
@@ -37,6 +37,7 @@
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
         <div class="sidebar-brand-icon">
+          <!-- static/img/TC_logo_blue_370x91.png -->
           <img src="static/img/TC_logo_blue_370x91.png" height="50">
         </div>
       </a>
@@ -46,7 +47,7 @@
 
       <!-- Nav Item - Dashboard -->
       <li class="nav-item active">
-        <a class="nav-link" href="/lesson3_3">
+        <a class="nav-link" href="/lesson4">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Dashboard</span></a>
       </li>
@@ -54,101 +55,19 @@
       <!-- Divider -->
       <hr class="sidebar-divider">
 
-      <!-- Heading -->
       <div class="sidebar-heading">
         Interact
       </div>
 
-      <!-- Nav Item - Export Collapse Menu -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-          <i class="fas fa-fw fa-images"></i>
-          <span>Select Viz</span>
-        </a>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="#" onclick="change_viz('{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MyTCDash');"><i class="fas fa-fw fa-image"></i><span>TC Dash</span></a>
-            <a class="collapse-item" href="#" onclick="change_viz('{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/SalesMap');"><i class="fas fa-fw fa-image"></i><span>Sales Map</span></a>
-            <a class="collapse-item" href="#" onclick="change_viz('{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/TotalSales');"><i class="fas fa-fw fa-image"></i><span>Sales & Profit</span></a>
-          </div>
-        </div>
-      </li>
-
-      <!-- Nav Item - Filters Collapse Menu -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-          <i class="fas fa-fw fa-filter"></i>
-          <span>Static Filter</span>
-        </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Region Filters:</h6>
-            <a class="collapse-item" href="#" onclick="filterTableau('Region',['Central'])">Central</a>
-            <a class="collapse-item" href="#" onclick="filterTableau('Region',['East'])">East</a>
-            <a class="collapse-item" href="#" onclick="filterTableau('Region',['South'])">South</a>
-            <a class="collapse-item" href="#" onclick="filterTableau('Region',['West'])">West</a>
-            <a class="collapse-item" href="#" onclick="filterClear('Region')">Clear Filters</a>
-          </div>
-        </div>
-      </li>
-
-      <!-- Nav Item - Filters Collapse Menu -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities2" aria-expanded="true" aria-controls="collapseUtilities2">
-          <i class="fas fa-fw fa-filter"></i>
-          <span>Dynamic Filter</span>
-        </a>
-        <div id="collapseUtilities2" class="collapse" aria-labelledby="headingUtilities2" data-parent="#accordionSidebar">
-          <div id="dynFilter" class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Category Filters:</h6>
-            <!--
-            We Will populate this dynamically from the javascript
-            -->
-          </div>
-        </div>
-      </li>
-
-      <!-- Nav Item - Marks Select Collapse Menu -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseMarks" aria-expanded="true" aria-controls="collapseMarks">
-          <i class="fas fa-fw fa-check"></i>
-          <span>Select Marks</span>
-        </a>
-        <div id="collapseMarks" class="collapse" aria-labelledby="headingMarks" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Select Mark:</h6>
-            <!-- Lesson 3_3 -->
-            <!-- We need to send some values to the function selectTableau() -->
-            <!-- These values will 'select' in Tableau just like you could do by clicking -->
-            <!-- Multiple values can be sent together in an array ot values -->
-            <!-- We're working on the Sale Map to these values will be states -->
-            <!-- Enter a couple of states in the empty arrays in the next 3 lines -->
-            <!-- eg the format will look like selectTableau('State',['Washington','California']) -->
-            <a class="collapse-item" href="#" onclick="selectTableau('State',[])">East</a>
-            <a class="collapse-item" href="#" onclick="selectTableau('State',[])">Central</a>
-            <a class="collapse-item" href="#" onclick="selectTableau('State',[])">West</a>
-            <a class="collapse-item" href="#" onclick="selectClear()">Clear Selections</a>
-          </div>
-        </div>
-      </li>
-
-
       <!--Navigation Button-->
-      <hr class="sidebar-divider">
       <li class="nav-item">
         <a class="nav-link" href="#" onclick="revertAll();"><i class="fas fa-fw fa-sync-alt"></i><span>Revert to Original</span></a>
         <a class="nav-link" href="#" onclick="undo();"><i class="fas fa-fw fa-undo-alt"></i><span>Undo</span></a>
         <a class="nav-link" href="#" onclick="redo();"><i class="fas fa-fw fa-redo-alt"></i><span>Redo</span></a>
       </li>
 
-      <!-- Divider -->
-      <hr class="sidebar-divider d-none d-md-block">
-      <li class="nav-item">
-        <a class="nav-link" target = "_blank" href="https://help.tableau.com/current/api/embedding_api/en-us/index.html">
-          <i class="fas fa-fw fa-comment-dots"></i>
-          <span>Wanna Know More?</span>
-        </a>
-      </li>
+
+
 
       <!-- Sidebar Toggler (Sidebar) -->
       <div class="text-center d-none d-md-inline">
@@ -226,8 +145,8 @@
                     </div>
                   </div>
                   <div>
-                    <div class="small text-gray-500">December 12, 2019</div>
-                    <span class="font-weight-bold">A new monthly report is ready to download!</span>
+                    <div class="small text-gray-500">May 18, 2022</div>
+                    <span class="font-weight-bold">It's TC! Drinks later! </span>
                   </div>
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
@@ -237,7 +156,7 @@
                     </div>
                   </div>
                   <div>
-                    <div class="small text-gray-500">December 7, 2019</div>
+                    <div class="small text-gray-500">May 17, 2022</div>
                     $290.29 has been deposited into your account!
                   </div>
                 </a>
@@ -248,7 +167,7 @@
                     </div>
                   </div>
                   <div>
-                    <div class="small text-gray-500">December 2, 2019</div>
+                    <div class="small text-gray-500">May 16, 2022</div>
                     Spending Alert: We've noticed unusually high spending for your account.
                   </div>
                 </a>
@@ -351,7 +270,7 @@
 
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800">Lesson 3.3 - Select Marks</h1>
+            <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
           </div>
 
           <!-- DataTables Example -->
@@ -367,12 +286,17 @@
 
                 <div class="card-body flex-column">
                   <div id="vizContainer">
+                    <!-- Lesson 1 -->
+                    <!-- This is the tableau-viz component -->
+                    <!-- Please hide the toolbar --> 
+                    <!--https://prod-uk-a.online.tableau.com/t/tc23hot20/views/workbook_user2/MyTCDash--> 
                     <tableau-viz id="tableauViz"
                       src= "{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MyTCDash"
-                        device="desktop" toolbar="hidden" hide-tabs width="100%">
+                        device="desktop" toolbar="hidden" hide-tabs width=100%>
                     </tableau-viz>
+
+
                   </div>
-                  <div id='eventMark'></div>
 
                   </div>
 
