--- a/templates/loader2.html
+++ b/templates/loader2.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Loading</title>
-	<script type="module" src="http://localhost:8000/javascripts/api/tableau.embedding.3.latest.js"></script>
+	<script type="module" src="https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 	<!-- Custom styles for this template-->
 	<link href="static/css/sb-admin-2.min.css" rel="stylesheet">
@@ -48,7 +48,7 @@
 					<hr>
 					<div id=tabimg>				
 						<tableau-viz id="tableauViz"
-      					src="{{tabServer + '/views/RedirectPage/Dashboard1.png'}}" token='{{CA_SSO_token}}'>
+      					src="{{tabServer}}/t/{{tabSite}}/views/{{tabRedirect}}/Dashboard1.png" token='{{CA_SSO_token}}'>
     					</tableau-viz>
 					</div>
 				</div>
