--- a/templates/login4.html
+++ b/templates/login4.html
@@ -38,16 +38,15 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
-                    <h1 class="h4 text-gray-900 mb-4">Lesson 2 - Connected Apps. 
-                      Weclome External User!
-                    </h1>
+                    <h1 class="h4 text-gray-900 mb-4">Lesson 4 - User Attribute Functions. 
+                      Weclome External User!</h1>
                   </div>
                   <div class="text-center mb-4">
                     <img src="static/img/TC_logo_blue_370x91.png" width="340">
                   </div>
                   <form action="{{url_for('getJWT')}}" class="user" method="post">
                     <div class="form-group">
-                      <input type="hidden" id="route" name="route" value="2">
+                      <input type="hidden" id="route" name="route" value="4">
                       <input type="text" class="form-control form-control-user" id="username" name="username" aria-describedby="emailHelp" placeholder="Enter Username...">
                     </div>
                     <div class="form-group">
