--- a/templates/complete.html
+++ b/templates/complete.html
@@ -362,7 +362,7 @@
                   <div id="vizContainer">
                     <tableau-viz id="tableauViz"
                       src= "{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MyTCDash"
-                        device="desktop" toolbar="hidden" hide-tabs width="100%">
+                        device="desktop" toolbar="hidden" show-tabs width="100%" token='{{CA_SSO_token}}'>
                     </tableau-viz>
                   </div>
                   <div id='eventMark'></div>
