fixes for uaf and s

--- a/templates/complete.html
+++ b/templates/complete.html
@@ -67,9 +67,9 @@
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="#" onclick="change_viz('{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MyTCDash');"><i class="fas fa-fw fa-image"></i><span>TC Dash</span></a>
-            <a class="collapse-item" href="#" onclick="change_viz('{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/SalesMap');"><i class="fas fa-fw fa-image"></i><span>Sales Map</span></a>
-            <a class="collapse-item" href="#" onclick="change_viz('{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/TotalSales');"><i class="fas fa-fw fa-image"></i><span>Sales & Profit</span></a>
+            <a class="collapse-item" href="#" onclick="change_viz('My TC Dash');"><i class="fas fa-fw fa-image"></i><span>TC Dash</span></a>
+            <a class="collapse-item" href="#" onclick="change_viz('Sales Map');"><i class="fas fa-fw fa-image"></i><span>Sales Map</span></a>
+            <a class="collapse-item" href="#" onclick="change_viz('Total Sales');"><i class="fas fa-fw fa-image"></i><span>Sales & Profit</span></a>
           </div>
         </div>
       </li>
