remove comments and add backup

--- a/templates/lesson1.html
+++ b/templates/lesson1.html
@@ -288,11 +288,10 @@
                   <div id="vizContainer">
                     <!-- Lesson 1 -->
                     <!-- This is the tableau-viz component -->
-                    <!-- Please hide the toolbar --> 
-                    <!--https://prod-uk-a.online.tableau.com/t/tc23hot20/views/workbook_user2/MyTCDash--> 
+                    <!-- Please hide the toolbar -->  
                     <tableau-viz id="tableauViz"
                       src= "{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MyTCDash"
-                        device="mobile" toolbar="top" hide-tabs width=100%>
+                        device="desktop" toolbar="top" hide-tabs width=100%>
                     </tableau-viz>
 
 
