upload to video fork for alex

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>TC - BYO Analytical App</title>
+  <title>HOT - BYO Analytical App</title>
 
   <!-- Custom fonts for this template-->
   <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -73,9 +73,9 @@
 <body>
 
   <div class="container2">
-    <img src="static/img/tc-home-hero-foreground_v4.png" style="width:100%;">
+    <img src="static/img/home-hero-foreground_v4.png" style="width:100%;">
     <div class="top-left">
-      <img src="static/img/TC_logo_blue_370x91.png" style="width:100%;">
+      <img src="static/img/TABlogo_wht.png" style="width:100%;">
     </div>
     <div class="items-h">
       <h1>Embedded Hands On Training Menu</h1>
