--- a/templates/lesson3_1.html
+++ b/templates/lesson3_1.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>TC - Swap Viz</title>
+  <title>HOT - Swap Viz</title>
 
   <!-- Custom fonts for this template-->
   <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -38,7 +38,7 @@
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
         <div class="sidebar-brand-icon">
-          <img src="static/img/TC_logo_blue_370x91.png" height="50">
+          <img src="static/img/sunnie-foods-primary-logo-03.png" height="30">
         </div>
       </a>
 
@@ -70,7 +70,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <!-- Lesson 3_1 -->
             <!-- Set the change_viz value to a Tableau view url -->
-            <!-- Set the first to be our tc_viz dashboard called MyTCDash with a name of TC Dashboard-->
+            <!-- Set the first to be our tc_viz dashboard called MySalesDash with a name of TC Dashboard-->
             <!-- Set the second to be the single sheet Sales Map from the tc_viz workbook with a name of Sales Map-->
             <!-- Set the third to be Regional Global Temperatures from Tableau Samples dashboard with a name of Temperatures-->
             <a class="collapse-item" href="#" onclick="change_viz('');"><i class="fas fa-fw fa-image"></i><span>View Name 1</span></a>
@@ -317,7 +317,7 @@
                 <div class="card-body flex-column">
                   <div id="vizContainer">
                     <tableau-viz id="tableauViz"
-                      src= "{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MyTCDash"
+                      src= "{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MySalesDash"
                         device="desktop" toolbar="hidden" hide-tabs width="100%">
                     </tableau-viz>
                   </div>
@@ -341,7 +341,7 @@
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; TC 2023</span>
+            <span>Copyright &copy; Alpine Group 2023</span>
           </div>
         </div>
       </footer>
