--- a/templates/lesson3_4.html
+++ b/templates/lesson3_4.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>TC - Get Marks</title>
+  <title>HOT - Get Marks</title>
 
   <!-- Custom fonts for this template-->
   <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -37,7 +37,7 @@
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
         <div class="sidebar-brand-icon">
-          <img src="static/img/TC_logo_blue_370x91.png" height="50">
+          <img src="static/img/sunnie-foods-primary-logo-03.png" height="30">
         </div>
       </a>
 
@@ -67,7 +67,7 @@
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="#" onclick="change_viz('{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MyTCDash');"><i class="fas fa-fw fa-image"></i><span>TC Dash</span></a>
+            <a class="collapse-item" href="#" onclick="change_viz('{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MySalesDash');"><i class="fas fa-fw fa-image"></i><span>TC Dash</span></a>
             <a class="collapse-item" href="#" onclick="change_viz('{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/SalesMap');"><i class="fas fa-fw fa-image"></i><span>Sales Map</span></a>
             <a class="collapse-item" href="#" onclick="change_viz('{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/TotalSales');"><i class="fas fa-fw fa-image"></i><span>Sales & Profit</span></a>
           </div>
@@ -361,7 +361,7 @@
                 <div class="card-body flex-column">
                   <div id="vizContainer">
                     <tableau-viz id="tableauViz"
-                      src= "{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MyTCDash"
+                      src= "{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MySalesDash"
                         device="desktop" toolbar="hidden" hide-tabs width="100%">
                     </tableau-viz>
                   </div>
@@ -389,7 +389,7 @@
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; TC 2023</span>
+            <span>Copyright &copy; Alpine Group 2023</span>
           </div>
         </div>
       </footer>
