--- a/templates/lesson4.html
+++ b/templates/lesson4.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>TC - User Attribute Function</title>
+  <title>HOT - User Attribute Function</title>
 
   <!-- Custom fonts for this template-->
   <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -37,8 +37,8 @@
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
         <div class="sidebar-brand-icon">
-          <!-- static/img/TC_logo_blue_370x91.png -->
-          <img src="static/img/TC_logo_blue_370x91.png" height="50">
+          <!-- static/img/sunnie-foods-primary-logo-03.png -->
+          <img src="static/img/sunnie-foods-primary-logo-03.png" height="30">
         </div>
       </a>
 
@@ -146,7 +146,7 @@
                   </div>
                   <div>
                     <div class="small text-gray-500">May 18, 2022</div>
-                    <span class="font-weight-bold">It's TC! Drinks later! </span>
+                    <span class="font-weight-bold">A new monthly report is ready to download! </span>
                   </div>
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
@@ -289,9 +289,9 @@
                     <!-- Lesson 1 -->
                     <!-- This is the tableau-viz component -->
                     <!-- Please hide the toolbar --> 
-                    <!--https://prod-uk-a.online.tableau.com/t/tc23hot20/views/workbook_user2/MyTCDash--> 
+                    <!--https://prod-uk-a.online.tableau.com/t/tc23hot20/views/workbook_user2/MySalesDash--> 
                     <tableau-viz id="tableauViz"
-                      src= "{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MyTCDash"
+                      src= "{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MySalesDash"
                         device="desktop" toolbar="hidden" hide-tabs width=100%>
                     </tableau-viz>
 
@@ -317,7 +317,7 @@
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; TC 2023</span>
+            <span>Copyright &copy; Alpine Group 2023</span>
           </div>
         </div>
       </footer>
