--- a/templates/login2.html
+++ b/templates/login2.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>TC - BYO Analytical App</title>
+  <title>HOT - BYO Analytical App</title>
 
   <!-- Custom fonts for this template-->
   <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
   <link rel="shortcut icon" href="static/img/favicon.ico">
 
   <!-- Custom styles for this template-->
-  <link href="static/css/sb-admin-2.min.css" rel="stylesheet">
+  <link href="static/css/sb-admin-2-alpine.css" rel="stylesheet">
 
 </head>
 
@@ -34,7 +34,7 @@
           <div class="card-body p-0">
             <!-- Nested Row within Card Body -->
             <div class="row">
-              <div class="col-lg-6" style="background-image: url('static/img/TC_Dude.jpeg'); background-repeat: no-repeat; background-size: cover;"></div>
+              <div class="col-lg-6" style="background-image: url('static/img/iphone.jpg'); background-repeat: no-repeat; background-size: cover;"></div>
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
@@ -43,7 +43,7 @@
                     </h1>
                   </div>
                   <div class="text-center mb-4">
-                    <img src="static/img/TC_logo_blue_370x91.png" width="340">
+                    <img src="static/img/alpine-group-primary-logo.png" width="340">
                   </div>
                   <form action="{{url_for('getJWT')}}" class="user" method="post">
                     <div class="form-group">
