--- a/static/css/sb-admin-2-alpine.css
+++ b/static/css/sb-admin-2-alpine.css
@@ -2255,14 +2255,14 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #3f7a6f;
-  border-color: #3f7a6f;
+  background-color: #a9cddb;
+  border-color: #a9cddb;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #e8a350;
-  border-color: #e8a350;
+  background-color: #fcd65e;
+  border-color: #fcd65e;
 }
 
 .btn-primary:focus, .btn-primary.focus {
@@ -9668,7 +9668,7 @@ a:focus {
 
 .bg-gradient-primary {
   background-color: #4e73df;
-  background-image: linear-gradient(180deg, #3f7a6f 10%, #3f7a6f 100%);
+  background-image: linear-gradient(180deg, #a9cddb 10%, #a9cddb 100%);
   background-size: cover;
 }
 
