--- a/templates/complete.html
+++ b/templates/complete.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>TC - Completed Portal</title>
+  <title>Alpine Group Portal</title>
 
   <!-- Custom fonts for this template-->
   <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -37,7 +37,7 @@
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
         <div class="sidebar-brand-icon">
-          <img src="static/img/TC_logo_blue_370x91.png" height="50">
+          <img src="static/img/sunnie-foods-primary-logo-03.png" height="30">
         </div>
       </a>
 
@@ -67,9 +67,9 @@
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="#" onclick="change_viz('My TC Dash');"><i class="fas fa-fw fa-image"></i><span>TC Dash</span></a>
-            <a class="collapse-item" href="#" onclick="change_viz('Sales Map');"><i class="fas fa-fw fa-image"></i><span>Sales Map</span></a>
-            <a class="collapse-item" href="#" onclick="change_viz('Total Sales');"><i class="fas fa-fw fa-image"></i><span>Sales & Profit</span></a>
+            <a class="collapse-item" href="#" onclick="change_viz('{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MySalesDash');"><i class="fas fa-fw fa-image"></i><span>Dashboard</span></a>
+            <a class="collapse-item" href="#" onclick="change_viz('{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/SalesMap');"><i class="fas fa-fw fa-image"></i><span>Sales Map</span></a>
+            <a class="collapse-item" href="#" onclick="change_viz('{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/TotalSales');"><i class="fas fa-fw fa-image"></i><span>Sales & Profit</span></a>
           </div>
         </div>
       </li>
@@ -117,9 +117,9 @@
         <div id="collapseMarks" class="collapse" aria-labelledby="headingMarks" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Select Mark:</h6>
-            <a class="collapse-item" href="#" onclick="selectTableau('State',['West Virginia','Virginia','Vermont','Tennessee','South Carolina','Rhode Island','Pennsylvania','Ohio','North Carolina','New York','New Jersey','New Hampshire','Michigan','Massachusetts','Maryland','Kentucky','Indiana','Georgia','Florida','District of Columbia','Delaware','Connecticut','Alabama'])">East</a>
-            <a class="collapse-item" href="#" onclick="selectTableau('State',['Wisconsin','Texas','South Dakota','Oklahoma','North Dakota','Nebraska','Missouri','Mississippi','Minnesota','Louisiana','Kansas','Iowa','Illinois','Arkansas'])">Central</a>
-            <a class="collapse-item" href="#" onclick="selectTableau('State',['Washington','Utah','Oregon','New Mexico','Nevada','Montana','Idaho','Colorado','California','Arizona'])">West</a>
+            <a class="collapse-item" href="#" onclick="selectTableau('State',['Washington', 'Oregon', 'Montana', 'Idaho','Wyoming','North Dakota','South Dakota'])">North West</a>
+            <a class="collapse-item" href="#" onclick="selectTableau('State',['Wyoming','Montana','Idaho','North Dakota','South Dakota','Kansas','West Virginia','Vermont','New Hampshire','Maine'])">Low Quantity</a>
+            <a class="collapse-item" href="#" onclick="selectTableau('State',['California','Arizona','New Mexico','Texas'])">Mexico Border</a>
             <a class="collapse-item" href="#" onclick="selectClear()">Clear Selections</a>
           </div>
         </div>
@@ -344,7 +344,7 @@
 
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 mb-0 text-gray-800">Complete Solution</h1>
+            <h1 class="h3 mb-0 text-gray-800">Sales Portal</h1>
           </div>
 
           <!-- DataTables Example -->
@@ -361,7 +361,7 @@
                 <div class="card-body flex-column">
                   <div id="vizContainer">
                     <tableau-viz id="tableauViz"
-                      src= "{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MyTCDash"
+                      src= "{{tabServer}}/t/{{tabSite}}/views/{{tabWorkbook}}/MySalesDash"
                         device="desktop" toolbar="hidden" hide-tabs width="100%" token='{{CA_SSO_token}}'>
                     </tableau-viz>
                   </div>
@@ -386,7 +386,7 @@
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; TC 2023</span>
+            <span>Copyright &copy; Alpine Group 2023</span>
           </div>
         </div>
       </footer>
@@ -416,7 +416,7 @@
         <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="/">Logout</a>
+          <a class="btn btn-primary" href="/login9">Logout</a>
         </div>
       </div>
     </div>
